--- a/index.html
+++ b/index.html
@@ -103,6 +103,11 @@
 					colourResult.innerText = "Red - Purple";
 					document.getElementById('containerC').style.backgroundColor = "rgb(177, 11, 66)";
 				}
+				else if (Colour1 == "red" && Colour2 == "white" || Colour1 == "white" && Colour2 == "red")
+				{
+					colourResult.innerText = "Pink";
+					document.getElementById('containerC').style.backgroundColor = "rgb(255, 152, 215)";
+				}
 				else if (Colour1 == "Beautiful" && Colour2 == "Lady")
 				{
 					BL.style.opacity = 1;
